Added login and registration in text file